welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:33: error: identifier expected but '(' found.
def(d) {
   ^ZigZag:38: error: identifier expected but '(' found.
def (g) {
    ^